[metadata]
name = tantale.github.io
version = 0.1.0
description = Tantale’s Blog Generator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = blog, documentation, sphinx, news
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: French
    Programming Language :: Python :: 3.8
    Topic :: Text Editors :: Documentation
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: Markdown
    Topic :: Text Processing :: Markup :: reStructuredText
platforms = any
url = https://tantale.github.io/
project_urls =
    Source = https://github.com/tantale/tantale.github.io
    Bug Tracker = https://github.com/tantale/tantale.github.io/issues
author = Laurent LAPORTE
author_email = tantale.solutions@gmail.com

[options]
packages = find:
package_dir =
    =src
include_package_data = True
zip_safe = True
python_requires = >=3.8,<4
install_requires =
    mkdocs
    mkdocs-material

[options.packages.find]
where = src

[build_sphinx]
source-dir = docs
build-dir = pages
